# WordGuesser

./: .gitattributes  README.md  all_bulgarian_words.json  main.py  slovored.json  slovored.py  words_wiktionary.json
Scrapers/: main.py  pixwords.py  slovored.py  test.json  wiktionary.py
word_guesser/: Cargo.toml
word_guesser/src/: inputs.rs  main.rs
