[package]
name = "word_guesser"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "linux")']
image = "rust:latest"

[target.'cfg(target_os = "windows")']
runner = "wine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"